fix(eighth): don't show scrollbars when resizing eighth admin page
The eighth admin page is able to adapt to a range of screen sizes, but
there are some size ranges where horizontal scrollbars are shown despite
having enough screen space to avoid this.

--- a/intranet/static/css/responsive.scss
+++ b/intranet/static/css/responsive.scss
@@ -313,7 +313,7 @@
 
 /* EIGHTH ADMIN UI */
 
-@media (max-width: 695px) {
+@media (max-width: 750px) {
     /* flatten table */
     td.admin-section {
         .admin-dashboard & {
@@ -322,7 +322,11 @@
             height: auto;
             padding-left: 0;
         }
+    }
+}
 
+@media (max-width: 785px) {
+    td.admin-section {
         tr &:last-of-type:not(:first-of-type) {
             padding-left: 0;
         }
